Port task persistence runtime to Java 8